Updated site content

--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
         <div class="nav-actions">
           <a href="tel:+61491570156" class="phone-btn">
             <i class="fas fa-phone"></i>
-            <span>Call Now</span>
+            <span>Book To Call</span>
           </a>
-          <button class="reservation-btn">Reserve Table</button>
         </div>
 
         <div class="mobile-menu-toggle">
