--- a/index.html
+++ b/index.html
@@ -758,38 +758,18 @@
             </div>
           </div>
 
-          <div class="contact-form">
-            <div class="form-container">
-              <h3>Make a Reservation</h3>
-              <form id="reservation-form">
-                <div class="form-row">
-                  <input type="text" placeholder="Full Name" required />
-                  <input type="tel" placeholder="Phone Number" required />
-                </div>
-                <div class="form-row">
-                  <input type="email" placeholder="Email Address" required />
-                  <select required>
-                    <option value="">Party Size</option>
-                    <option value="1">1 Person</option>
-                    <option value="2">2 People</option>
-                    <option value="3">3 People</option>
-                    <option value="4">4 People</option>
-                    <option value="5">5 People</option>
-                    <option value="6+">6+ People</option>
-                  </select>
-                </div>
-                <div class="form-row">
-                  <input type="date" required />
-                  <input type="time" required />
-                </div>
-                <textarea
-                  placeholder="Special Requests (Optional)"
-                  rows="4"
-                ></textarea>
-                <button type="submit" class="btn btn-primary">
-                  Reserve Table
-                </button>
-              </form>
+          <div class="info-card call-card">
+            <div class="info-icon"><i class="fas fa-phone"></i></div>
+            <div class="info-content">
+              <h3>Book To Call</h3>
+              <p>
+                We take reservations over the phone. Tap the button below to
+                call us now.
+              </p>
+              <a href="tel:+61491570156" class="btn btn-primary">
+                <i class="fas fa-phone"></i>
+                Call 0491 570 156
+              </a>
             </div>
           </div>
         </div>
@@ -871,61 +851,6 @@
         </div>
       </div>
     </footer>
-
-    <!-- Reservation Modal -->
-    <div id="reservation-modal" class="modal">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h3>Reserve Your Table</h3>
-          <button class="modal-close">&times;</button>
-        </div>
-        <div class="modal-body">
-          <form id="modal-reservation-form">
-            <div class="form-group">
-              <label>Full Name</label>
-              <input type="text" required />
-            </div>
-            <div class="form-group">
-              <label>Phone Number</label>
-              <input type="tel" required />
-            </div>
-            <div class="form-group">
-              <label>Email Address</label>
-              <input type="email" required />
-            </div>
-            <div class="form-row">
-              <div class="form-group">
-                <label>Date</label>
-                <input type="date" required />
-              </div>
-              <div class="form-group">
-                <label>Time</label>
-                <input type="time" required />
-              </div>
-            </div>
-            <div class="form-group">
-              <label>Party Size</label>
-              <select required>
-                <option value="">Select party size</option>
-                <option value="1">1 Person</option>
-                <option value="2">2 People</option>
-                <option value="3">3 People</option>
-                <option value="4">4 People</option>
-                <option value="5">5 People</option>
-                <option value="6+">6+ People</option>
-              </select>
-            </div>
-            <div class="form-group">
-              <label>Special Requests (Optional)</label>
-              <textarea rows="3"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">
-              Confirm Reservation
-            </button>
-          </form>
-        </div>
-      </div>
-    </div>
 
     <script src="script.js" defer></script>
   </body>
