--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
     <title>
       Mr Zo Chinese Restaurant | Authentic Chinese Cuisine in Wilton
     </title>
@@ -31,6 +34,7 @@
         background: rgba(255, 255, 255, 0.95);
         border-bottom: 1px solid rgba(200, 16, 46, 0.1);
         z-index: 1000;
+        padding-top: env(safe-area-inset-top);
       }
       .nav-container {
         max-width: 1200px;
