--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       body {
         margin: 0;
         padding: 0;
-        background-color: rgba(255, 255, 255, 0.95);
+        background-color: #fff8dc;
       }
       .header {
         position: fixed;
