--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         position: fixed;
         top: 0;
         left: 0;
-        width: 100%;
+        right: 0;
+        width: 100vw;
         height: 80px;
         display: flex;
         align-items: center;
