--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         height: 80px;
         display: flex;
         align-items: center;
-        background: rgba(255, 255, 255, 0.95);
+        background: #fff8dc;
         border-bottom: 1px solid rgba(200, 16, 46, 0.1);
         z-index: 1000;
         padding-top: env(safe-area-inset-top);
