--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       body {
         margin: 0;
         padding: 0;
-        background-color: #fff8dc;
+        background-color: #ffffff;
       }
       .header {
         position: fixed;
@@ -32,7 +32,7 @@
         height: 80px;
         display: flex;
         align-items: center;
-        background: #fff8dc;
+        background: #ffffff;
         border-bottom: 1px solid rgba(200, 16, 46, 0.1);
         z-index: 1000;
         padding-top: env(safe-area-inset-top);
