--- a/index.html
+++ b/index.html
@@ -857,6 +857,11 @@
       </div>
     </footer>
 
+    <!-- Scroll to Top Button -->
+    <button id="scroll-to-top" class="scroll-to-top" aria-label="Scroll to top">
+      <i class="fas fa-arrow-up"></i>
+    </button>
+
     <script src="script.js" defer></script>
   </body>
 </html>
