--- a/index.html
+++ b/index.html
@@ -168,6 +168,34 @@
     <noscript><link rel="stylesheet" href="styles.css" /></noscript>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://images.unsplash.com" crossorigin />
+
+    <!-- Preload critical images for instant loading -->
+    <link
+      rel="preload"
+      as="image"
+      href="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://images.unsplash.com/photo-1559847844-5315695dadae?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://images.unsplash.com/photo-1582878826629-29b7ad1cdc43?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://images.unsplash.com/photo-1496116218417-1a781b1c416c?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://images.unsplash.com/photo-1603133872878-684f208fb84b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80"
+    />
     <!-- Load Google Fonts on desktop only to maximize mobile performance -->
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;600&family=Noto+Serif+SC:wght@600&display=swap"
@@ -534,7 +562,7 @@
           <div class="gallery-item large">
             <div
               class="gallery-image restaurant-interior"
-              data-bg="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=60"
+              data-bg="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80"
             ></div>
             <div class="gallery-overlay">
               <h4>Restaurant Interior</h4>
@@ -544,7 +572,7 @@
           <div class="gallery-item">
             <div
               class="gallery-image dish-1"
-              data-bg="https://images.unsplash.com/photo-1559847844-5315695dadae?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=60"
+              data-bg="https://images.unsplash.com/photo-1559847844-5315695dadae?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80"
             ></div>
             <div class="gallery-overlay">
               <h4>Sweet & Sour Pork</h4>
@@ -554,7 +582,7 @@
           <div class="gallery-item">
             <div
               class="gallery-image dish-2"
-              data-bg="https://images.unsplash.com/photo-1582878826629-29b7ad1cdc43?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=60"
+              data-bg="https://images.unsplash.com/photo-1582878826629-29b7ad1cdc43?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80"
             ></div>
             <div class="gallery-overlay">
               <h4>Kung Pao Chicken</h4>
@@ -564,7 +592,7 @@
           <div class="gallery-item">
             <div
               class="gallery-image dish-3"
-              data-bg="https://images.unsplash.com/photo-1496116218417-1a781b1c416c?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=60"
+              data-bg="https://images.unsplash.com/photo-1496116218417-1a781b1c416c?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80"
             ></div>
             <div class="gallery-overlay">
               <h4>Prawn Dumplings</h4>
@@ -574,7 +602,7 @@
           <div class="gallery-item">
             <div
               class="gallery-image dish-4"
-              data-bg="https://images.unsplash.com/photo-1603133872878-684f208fb84b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=60"
+              data-bg="https://images.unsplash.com/photo-1603133872878-684f208fb84b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80"
             ></div>
             <div class="gallery-overlay">
               <h4>Yang Chow Fried Rice</h4>
