--- a/index.html
+++ b/index.html
@@ -170,7 +170,27 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://images.unsplash.com" crossorigin />
 
-    <!-- Preload critical images for instant loading -->
+    <!-- Preload ALL critical images for instant loading across the site -->
+    <!-- Hero background images -->
+    <link
+      rel="preload"
+      as="image"
+      href="https://images.unsplash.com/photo-1555396273-367ea4eb4db5?ixlib=rb-4.0.3&auto=format&fit=crop&w=640&q=55"
+      media="(max-width: 768px)"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://images.unsplash.com/photo-1555396273-367ea4eb4db5?ixlib=rb-4.0.3&auto=format&fit=crop&w=2074&q=80"
+      media="(min-width: 769px)"
+    />
+    <!-- About section restaurant image -->
+    <link
+      rel="preload"
+      as="image"
+      href="https://images.unsplash.com/photo-1517248135467-4c7edcad34c4?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=60"
+    />
+    <!-- Gallery images -->
     <link
       rel="preload"
       as="image"
