--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
         </p>
         <div class="hero-actions">
           <a href="#menu" class="btn btn-primary">Explore Menu</a>
-          <a href="#contact" class="btn btn-secondary">
+          <a href="#location-card" class="btn btn-secondary">
             <i class="fas fa-map-marker-alt"></i>
             Visit Us
           </a>
@@ -754,7 +754,7 @@
 
         <div class="contact-content">
           <div class="contact-info">
-            <div class="info-card">
+            <div id="location-card" class="info-card">
               <div class="info-icon">
                 <i class="fas fa-map-marker-alt"></i>
               </div>
