--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         <div class="hero-info">
           <div class="info-item">
             <i class="fas fa-clock"></i>
-            <span>Open Daily 11:00 AM - 9:00 PM</span>
+            <span>Daily 11:00 AM - 2:30 PM, 5:30 PM - 9:00 PM</span>
           </div>
           <div class="info-item">
             <i class="fas fa-utensils"></i>
@@ -558,7 +558,7 @@
 
         <div class="menu-footer">
           <p class="price-note">
-            All prices in Australian Dollars • Price range: $15-40 per person
+            All prices in Australian Dollars • Price range: $15-30 per person
           </p>
           <div class="menu-actions">
             <a href="tel:+61491570156" class="btn btn-secondary">Order Now</a>
@@ -688,7 +688,7 @@
             </div>
             <p class="review-text">
               "Excellent food and service. The dishes tasted authentic and came
-              out quickly. Meal type: Lunch. Price per person: $20-30. Food: 5.
+              out quickly. Meal type: Lunch. Price per person: $15-30. Food: 5.
               Service: 5. Atmosphere: 4."
             </p>
           </div>
@@ -713,7 +713,7 @@
             <p class="review-text">
               "We shared a few dishes and loved the sweet & sour pork and prawn
               dumplings. Comfortable, family‑friendly vibe and attentive staff.
-              Our bill was about $25 per person. Highly recommended!"
+              Our total bill was around $45 for our group. Highly recommended!"
             </p>
           </div>
         </div>
